assets/css/app.css
/* ================== Variables ================== */
:root{
    --primary-color: #bb763b;
    --second-color: #196FE0;
    --hover-bg-color:  #db8c47;
    --border-hover-color: #a7652b;
    --shadow-1: 0px 2px 10px rgba(0, 0, 0, 0.3);
    --shadow-2: 0px 2px 10px rgba(26, 112, 224, 0.4);
}

/* ================== Global Styles ================== */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;

}

body{
    background-image: url("../images/wallpaper-login2.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

a{
    text-decoration: none;
    color: black;
    font-weight: 500;
}

ul{
    list-style-type: none;
}

/* ================== Notification ================== */
.notification {
    position: fixed;
    top: 70px; /* Adjust based on the height of your navbar */
    left: 50%;
    transform: translateX(-50%);
    padding: 1em 2em;
    margin: 1em 0;
    border-radius: 8px;
    backdrop-filter: blur(10px);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    z-index: 1000;
    opacity: 1;
    transition: opacity 1s ease-in-out;
    width: 70%;
    max-width: 600px;
    text-align: center;
    border: 1px solid rgba(255, 255, 255, 0.3);
}

.notification p {
    margin: 0;
}

.notification-success {
    background: rgba(76, 175, 80, 0.7); /* Green */
    color: white;
}

.notification-error {
    background: rgba(244, 67, 54, 0.7); /* Red */
    color: white;
}

.notification-warning {
    background: rgba(255, 193, 7, 0.7); /* Yellow */
    color: white;
}

.notification-info {
    background: rgba(33, 150, 243, 0.7); /* Blue */
    color: white;
}

.notification.fade-out {
    opacity: 0;
}

/* ================== Popups ================== */
/* ------------------ Rent car Modal ------------------ */
/* Modal Container */
.rent {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.rent .modal-content {
    background-color: rgba(254, 254, 254, 0.87);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    border: 1px solid rgba(136, 136, 136, 0.5);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
    width: 30%;
    max-width: 400px;
    top: -10%;
    margin: 15% auto;
    padding: 20px;
    border-radius: 8px;
}
.rent .modal-content:hover{
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(63, 63, 63, 0.5);
}
/* Close Button */
.rent .close {
    position: absolute;
    top: 12px;
    right: 20px;
    color: #888;
    font-size: 20px;
    cursor: pointer;
}

.rent .close:hover,
.rent .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}


.rent .modal-content .add-titles{
    margin-top: 0 ;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 8px;

}
.rent .modal-content .add-titles h2{
    all: unset;

    color: black; 
    font-size: 30px;
    font-weight: 600;
}
.rent .modal-content .form-container{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
.rent .modal-content .form-container .sub-container{
    width: 100%;
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;
}
.rent .modal-content .form-container label{
    width: 150px;
}

.rent .modal-content .submit-add-popup{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 10px;
    margin-bottom: 10px;
}
.rent .modal-content button {
    all: unset;

    background-color: #b87926e0;
    color: #fff;
    padding: 6px 14px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
}
.rent .modal-content button:hover {
    transition: all 0.3s ease-in-out;
    background-color: #db9b46e0;
}
.rent .custom-file-upload input[type="file"] {
    display: none;
}
.rent .sub-container1 {
    width:100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
.rent .upload-icon {
    display: inline-block;
    padding: 10px 20px; /* Adjust padding as needed */
    width: 200px;
    text-align: center;
    background-color: #b87926e0; 
    color: #fff; /* Adjust text color as needed */
    border-radius: 5px; /* Adjust border radius as needed */
    cursor: pointer;
    transform: translate(-24px, 0);
}
.rent .upload-icon:hover{
    background-color: #db9b46e0;
    transition: all 0.3s ease-in-out;
}
.rent .upload-icon::before {
    content: '\f093'; /* Unicode for upload icon */
    font-family: FontAwesome; /* Font Awesome for the icon */
    margin-right: 5px; /* Adjust margin as needed */
}
.no-file-name {
    margin-top: 10px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
/* ------------------ End of Rent car Modal Popup ------------------ */
/* ------------------ Update car Modal Popup ------------------ */
.update {
    all: unset;

    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.update .modal-content {
    background-color: rgba(254, 254, 254, 0.87);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    border: 1px solid rgba(136, 136, 136, 0.5);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
    width: 30%;
    max-width: 400px;
    top: -10%;
    margin: 15% auto;
    padding: 20px;
    border-radius: 8px;
}
/* ... */

